# local-ai-runtime

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md
runtime/host-orchestrator/: README.md  pyproject.toml
runtime/host-orchestrator/fixtures/runtime-v2/: live-coding-probe-output.md
runtime/host-orchestrator/fixtures/wave1-smokes/: README.md  manifest.json
runtime/host-orchestrator/scripts/: README.md  run-hermes-parity.ps1  run-host-task.ps1  run-multi-worker-simulation.ps1  run-remote-non-gui-promotion.ps1  run-vm-gui-promotion.ps1  run-wave1-smokes.ps1  test-wave1-acceptance.ps1
runtime/host-orchestrator/src/host_orchestrator/: __init__.py  __main__.py  adaptive_orchestration.py  agent_work_assets.py  agentbridge.py  canonical_result.py  db.py  (+22 more)
runtime/host-orchestrator/tests/: support.py  test_adaptive_orchestration.py  test_agent_work_assets.py  test_agentbridge_intake.py  test_baseline_canonicalization.py  test_baseline_deterministic_git.py  test_baseline_evidence.py  test_baseline_execution_safety.py  test_baseline_product_submission.py  test_baseline_q0_gates_limits.py  test_baseline_qualification.py  test_baseline_state_policy.py  test_claude_code_worker.py  test_cli_entrypoint.py  test_crash_recovery.py  test_db.py  test_hermes_parity.py  test_lifecycle_ops.py  test_multi_worker_simulation.py  test_path_guard.py  test_planner_adapter.py  test_planning_governance.py  test_remote_non_gui_promotion.py  test_runtime_v2.py  test_scaffold.py  test_verification.py  test_vm_gui_promotion.py  test_wave1_execution.py  test_worker_exec.py
(+389 files in other folders)
