[project]
name = "host-orchestrator"
version = "0.1.0"
description = "Wave 1 host-local orchestrator scaffold for Hermes v2."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-codex>=0.1.0b2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
